# url-shortener

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: .gitignore
.github/workflows/: ci.yml
app/: api.py  config.py  container.py
app/dependencies/: __init__.py  auth.py  db.py  rate_limits.py  repositories.py  services.py  types.py
app/routers/: auth.py  notifications.py  url.py
app/routes/: auth.py
app/schemas/: __init__.py  auth.py  notification.py  url.py
app/services/: auth_service.py
core/: permissions.py
core/entities/: __init__.py  classification.py  classification_result.py  classifier_result.py  notification.py  url.py  users.py
core/enums/: safety_status.py
core/repositories/: classification_results.py  notifications.py  permissions.py  urls.py  users.py
core/services/: auth_service.py  hashing_service.py  url_validation.py
core/services/classification/: __init__.py  base.py  exceptions.py  result.py
core/services/classification/classifier/: base.py  bert_classifier.py  online_classifier.py  onnx_classifier.py  pattern_match.py  xgb_classifier.py
docs/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
infra/: config.py  settings.py
infra/db/models/: __init__.py  classification_result.py  notification.py  permission.py  url.py  user.py
infra/db/repositories/: classification_results.py  notifications.py  permissions.py  urls.py  users.py
infra/services/: db_service.py
scripts/: offline_clf.py  online_clf.py
tests/: conftest.py  test_hashing_service.py
tests/core/entities/: test_classification.py  test_users.py
tests/core/services/: test_url_validation.py
tests/core/services/classification/: test_classification.py  test_onnx_classifier.py  test_pattern_match_classifier.py
tests/infra/: test_config.py  test_settings.py
tests/infra/db/: test_db_setup.py
tests/infra/db/repositories/: test_classification_results.py  test_notifications.py  test_permissions.py  test_urls.py  test_users.py
tests/infra/services/: test_db_service.py  test_hashing_service.py
tests/workers/: test_config.py
workers/: __init__.py  celery_app.py  config.py  db.py  logging.py
workers/models/: batch_result.py
workers/tasks/: classification.py
