[project]
name = "url-shortener"
version = "0.0.1"
description = "Simple URL shortener"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0,<24",
    "bcrypt>=4.1.0,<6",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "sqlalchemy>=2.0.25,<3",
    "asyncpg>=0.29,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-jose>=3.3.0,<4",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.3.5",
    "ruff>=0.9.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app", "core", "infra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "infra"]
