[project]
name = "url-shortener"
version = "0.0.4"
description = "Simple URL shortener with ML-powered URL classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0,<24",
    "bcrypt>=4.1.0,<6",
    "fastapi>=0.115,<1",
    "fastapi-limiter>=0.1.6,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "sqlalchemy>=2.0.25,<3",
    "asyncpg>=0.29,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-jose>=3.3.0,<4",
    "python-multipart>=0.0.9",
    "redis>=7.1.0,<8",
    "email-validator>=2.0.0",
    "numpy>=1.26,<3",
    "onnxruntime>=1.17,<2",
    "tldextract>=5.3.0,<6",
    "celery[redis]>=5.0.0,<6",
    "click>=8.1.0,<9",
    "structlog>=25.0.0,<26",
    "flower>=2.0.0,<3",
    "transformers>=5.0.0",
    "transformers[onnx]",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.3.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app", "core", "infra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "infra"]
